testng.xml file has been added into the project

--- a/SMARTDigiBook/test-output/index.html
+++ b/SMARTDigiBook/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\nanda\AppData\Local\Temp\testng-eclipse-1851894462\testng-customsuite.xml</span>
+                    <span>C:\Users\nanda\AppData\Local\Temp\testng-eclipse-306683906\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content skipped suite-Default_suite">
                       <span>
                         <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="locators.GetLocators" class="method navigator-link" hash-for-method="loginIntoApplication">loginIntoApplication</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="locators.GetLocators" class="method navigator-link" hash-for-method="verifyCreateAccount">verifyCreateAccount</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-Default_suite -->
@@ -126,18 +126,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginIntoApplication">
-                  </a> <!-- loginIntoApplication -->
-                  <span class="method-name">loginIntoApplication</span>
+                  <a name="verifyCreateAccount">
+                  </a> <!-- verifyCreateAccount -->
+                  <span class="method-name">verifyCreateAccount</span>
                   <div class="stack-trace">com.microsoft.playwright.TimeoutError: Error {
   message=&apos;Timeout 30000ms exceeded.
   name=&apos;TimeoutError
   stack=&apos;TimeoutError: Timeout 30000ms exceeded.
-    at ProgressController.run (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\progress.js:76:26)
-    at Frame.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\frames.js:499:23)
-    at FrameDispatcher.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\dispatchers\frameDispatcher.js:70:132)
-    at FrameDispatcher._handleCommand (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\dispatchers\dispatcher.js:88:40)
-    at DispatcherConnection.dispatch (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\dispatchers\dispatcher.js:309:39)
+    at ProgressController.run (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\progress.js:76:26)
+    at Frame.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\frames.js:499:23)
+    at FrameDispatcher.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\dispatchers\frameDispatcher.js:70:132)
+    at FrameDispatcher._handleCommand (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\dispatchers\dispatcher.js:88:40)
+    at DispatcherConnection.dispatch (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\dispatchers\dispatcher.js:309:39)
 }
 Call log:
 -   - navigating to &quot;https://reader.smartdigibook.com/&quot;, waiting until &quot;load&quot;
@@ -150,7 +150,7 @@ Call log:
 	at com.microsoft.playwright.impl.PageImpl.navigate(PageImpl.java:918)
 	at com.microsoft.playwright.impl.PageImpl.navigate(PageImpl.java:42)
 	at com.microsoft.playwright.Page.navigate(Page.java:5491)
-	at locators.GetLocators.openBrowser(GetLocators.java:36)
+	at locators.GetLocators.openBrowser(GetLocators.java:42)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -181,11 +181,11 @@ Caused by: com.microsoft.playwright.TimeoutError: Error {
   message=&apos;Timeout 30000ms exceeded.
   name=&apos;TimeoutError
   stack=&apos;TimeoutError: Timeout 30000ms exceeded.
-    at ProgressController.run (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\progress.js:76:26)
-    at Frame.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\frames.js:499:23)
-    at FrameDispatcher.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\dispatchers\frameDispatcher.js:70:132)
-    at FrameDispatcher._handleCommand (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\dispatchers\dispatcher.js:88:40)
-    at DispatcherConnection.dispatch (C:\Users\nanda\AppData\Local\Temp\playwright-java-13627575178581451671\package\lib\server\dispatchers\dispatcher.js:309:39)
+    at ProgressController.run (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\progress.js:76:26)
+    at Frame.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\frames.js:499:23)
+    at FrameDispatcher.goto (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\dispatchers\frameDispatcher.js:70:132)
+    at FrameDispatcher._handleCommand (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\dispatchers\dispatcher.js:88:40)
+    at DispatcherConnection.dispatch (C:\Users\nanda\AppData\Local\Temp\playwright-java-12238697369041312290\package\lib\server\dispatchers\dispatcher.js:309:39)
 }
 Call log:
 -   - navigating to &quot;https://reader.smartdigibook.com/&quot;, waiting until &quot;load&quot;
@@ -203,7 +203,7 @@ Call log:
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nanda\AppData\Local\Temp\testng-eclipse-1851894462\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\nanda\AppData\Local\Temp\testng-eclipse-306683906\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -212,11 +212,7 @@ Call log:
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;locators.GetLocators&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;loginIntoApplication&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- locators.GetLocators --&gt;
+      &lt;class name=&quot;locators.GetLocators&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -258,7 +254,7 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginIntoApplication')
+data.setCell(0, 1, 'verifyCreateAccount')
 data.setCell(0, 2, 'locators.GetLocators')
 data.setCell(0, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
